htmxology-macros/src/named/snapshots/htmxology_macros__named__snapshot_tests__generic_with_bounds_and_default.snap
---
source: htmxology-macros/src/named/mod.rs
expression: test_named(input)
---
#[allow(unused)]
mod __test {
    impl<T: Display = String> htmxology::htmx::Named for BazField<T> {
        fn name(&self) -> htmxology::htmx::HtmlName {
            htmxology::htmx::HtmlName::from_static("baz-field")
                .expect("name was validated at compile time")
        }
    }
}
