htmxology-macros/src/named/snapshots/htmxology_macros__named__snapshot_tests__simple_struct.snap
---
source: htmxology-macros/src/named/mod.rs
expression: test_named(input)
---
#[allow(unused)]
mod __test {
    impl htmxology::htmx::Named for MyField {
        fn name(&self) -> htmxology::htmx::HtmlName {
            htmxology::htmx::HtmlName::from_static("my-field")
                .expect("name was validated at compile time")
        }
    }
}
